Fix some documentation

--- a/script copy.ipynb
+++ b/script copy.ipynb
@@ -13401,9 +13401,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dari hasil evaluasi pada 3 model diatas, didapatkan model Linear Regression biasa memiliki R2 Score paling rendah yaitu 0.93 dengan MAE 1.6769 pada training setnya dan pada validation setnya mendapat R2 Score 0.92 dengan MAE 1.7665, walaupun score-score tersebut tergolong bagus namun jika dibandingkan dengan 2 model lainnya yaitu Polynomial Features 2-Degree Linear Regression dan Polynomial Features 3-Degree Linear Regression score ini paling rendah.\n",
+    "Dari hasil evaluasi pada 3 model diatas, didapatkan model **Linear Regression** biasa memiliki akurasi paling rendah dengan **R2 Score 0.93** dan **MAE 1.6769** pada training setnya dan pada validation setnya mendapat **R2 Score 0.92** dan **MAE 1.7665**, walaupun score-score tersebut tergolong bagus namun jika dibandingkan dengan 2 model lainnya yaitu Polynomial Features 2-Degree Linear Regression dan Polynomial Features 3-Degree Linear Regression **akurasi dari Linear Regression ini yang paling rendah**.\n",
     "\n",
-    "Sedangkan **Polynomial Features 3-Degree Linear Regression** memiliki R2 Score paling tinggi yaitu 0.96 dengan MAE 1.2296 pada training setnya dan pada validation setnya mendapat R2 Score 0.96 dengan MAE 1.2832. Pada Polynomial Features 2-Degree Linear Regression dengan waktu training dan validation lebih cepat, score yang dihasilkan tidak terlalu berbeda dengan Polynomial Features 3-Degree Linear Regression."
+    "Sedangkan **Polynomial Features 3-Degree Linear Regression** memiliki akurasi paling tinggi dengan **R2 Score 0.96** dan **MAE 1.2296** pada training setnya dan pada validation setnya mendapat **R2 Score 0.96** dengan **MAE 1.2832**. Pada **Polynomial Features 2-Degree Linear Regression** dengan waktu training dan validation lebih cepat, score yang dihasilkan **tidak terlalu berbeda** dengan Polynomial Features 3-Degree Linear Regression."
    ]
   },
   {
@@ -14345,7 +14345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14363,11 +14363,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_pred_inf = pd.DataFrame(y_pred_inf, columns=['LG'])\n",
+    "y_pred_inf = pd.DataFrame(y_pred_inf, columns=['LR'])\n",
     "y_pred_inf_poly2 = pd.DataFrame(y_pred_inf_poly2, columns=['Poly2'])\n",
     "y_pred_inf_poly3 = pd.DataFrame(y_pred_inf_poly3, columns=['Poly3'])"
    ]
@@ -14376,12 +14376,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Menggabungkan hasil prediksi dengan dataframe data inference."
+    "Membuat dataframe baru yang berisi `price` (data inference) dan hasil predisi dari masing-masing model."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -14405,11 +14405,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>distance</th>\n",
-       "      <th>surge_multiplier</th>\n",
-       "      <th>price</th>\n",
-       "      <th>LG</th>\n",
+       "      <th>Actual</th>\n",
+       "      <th>LR</th>\n",
        "      <th>Poly2</th>\n",
        "      <th>Poly3</th>\n",
        "    </tr>\n",
@@ -14417,9 +14414,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Shared</td>\n",
-       "      <td>4.09</td>\n",
-       "      <td>1.0</td>\n",
        "      <td>9.0</td>\n",
        "      <td>11.117104</td>\n",
        "      <td>8.401581</td>\n",
@@ -14427,9 +14421,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>UberXL</td>\n",
-       "      <td>1.61</td>\n",
-       "      <td>1.0</td>\n",
        "      <td>14.0</td>\n",
        "      <td>14.095690</td>\n",
        "      <td>13.917725</td>\n",
@@ -14437,9 +14428,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>UberX</td>\n",
-       "      <td>1.75</td>\n",
-       "      <td>1.0</td>\n",
        "      <td>10.0</td>\n",
        "      <td>8.590248</td>\n",
        "      <td>9.089310</td>\n",
@@ -14447,9 +14435,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Black SUV</td>\n",
-       "      <td>1.57</td>\n",
-       "      <td>1.0</td>\n",
        "      <td>27.5</td>\n",
        "      <td>28.425169</td>\n",
        "      <td>28.106171</td>\n",
@@ -14457,9 +14442,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>UberPool</td>\n",
-       "      <td>3.04</td>\n",
-       "      <td>1.0</td>\n",
        "      <td>7.5</td>\n",
        "      <td>11.024267</td>\n",
        "      <td>9.749786</td>\n",
@@ -14467,9 +14449,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>Lux Black XL</td>\n",
-       "      <td>3.32</td>\n",
-       "      <td>1.0</td>\n",
        "      <td>34.0</td>\n",
        "      <td>34.079126</td>\n",
        "      <td>35.492859</td>\n",
@@ -14477,9 +14456,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>UberPool</td>\n",
-       "      <td>5.46</td>\n",
-       "      <td>1.0</td>\n",
        "      <td>11.0</td>\n",
        "      <td>17.494581</td>\n",
        "      <td>12.691193</td>\n",
@@ -14487,9 +14463,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>Lux Black</td>\n",
-       "      <td>2.45</td>\n",
-       "      <td>1.0</td>\n",
        "      <td>22.5</td>\n",
        "      <td>23.087332</td>\n",
        "      <td>23.441559</td>\n",
@@ -14497,9 +14470,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>UberX</td>\n",
-       "      <td>1.11</td>\n",
-       "      <td>1.0</td>\n",
        "      <td>7.5</td>\n",
        "      <td>6.879089</td>\n",
        "      <td>8.119781</td>\n",
@@ -14507,9 +14477,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>Black SUV</td>\n",
-       "      <td>3.30</td>\n",
-       "      <td>1.0</td>\n",
        "      <td>37.0</td>\n",
        "      <td>33.050644</td>\n",
        "      <td>33.748627</td>\n",
@@ -14520,43 +14487,33 @@
        "</div>"
       ],
       "text/plain": [
-       "           name  distance  surge_multiplier  price         LG      Poly2  \\\n",
-       "0        Shared      4.09               1.0    9.0  11.117104   8.401581   \n",
-       "1        UberXL      1.61               1.0   14.0  14.095690  13.917725   \n",
-       "2         UberX      1.75               1.0   10.0   8.590248   9.089310   \n",
-       "3     Black SUV      1.57               1.0   27.5  28.425169  28.106171   \n",
-       "4      UberPool      3.04               1.0    7.5  11.024267   9.749786   \n",
-       "5  Lux Black XL      3.32               1.0   34.0  34.079126  35.492859   \n",
-       "6      UberPool      5.46               1.0   11.0  17.494581  12.691193   \n",
-       "7     Lux Black      2.45               1.0   22.5  23.087332  23.441559   \n",
-       "8         UberX      1.11               1.0    7.5   6.879089   8.119781   \n",
-       "9     Black SUV      3.30               1.0   37.0  33.050644  33.748627   \n",
-       "\n",
-       "       Poly3  \n",
-       "0   8.386946  \n",
-       "1  13.796480  \n",
-       "2   8.904090  \n",
-       "3  27.786915  \n",
-       "4   9.899308  \n",
-       "5  35.615838  \n",
-       "6  12.822594  \n",
-       "7  23.166249  \n",
-       "8   8.059999  \n",
-       "9  33.737837  "
+       "   Actual         LR      Poly2      Poly3\n",
+       "0     9.0  11.117104   8.401581   8.386946\n",
+       "1    14.0  14.095690  13.917725  13.796480\n",
+       "2    10.0   8.590248   9.089310   8.904090\n",
+       "3    27.5  28.425169  28.106171  27.786915\n",
+       "4     7.5  11.024267   9.749786   9.899308\n",
+       "5    34.0  34.079126  35.492859  35.615838\n",
+       "6    11.0  17.494581  12.691193  12.822594\n",
+       "7    22.5  23.087332  23.441559  23.166249\n",
+       "8     7.5   6.879089   8.119781   8.059999\n",
+       "9    37.0  33.050644  33.748627  33.737837"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.concat([inference[['name', 'distance', 'surge_multiplier', 'price']], y_pred_inf, y_pred_inf_poly2, y_pred_inf_poly3], axis=1)"
+    "predictions = pd.concat([inference['price'], y_pred_inf, y_pred_inf_poly2, y_pred_inf_poly3], axis=1)\n",
+    "predictions.columns = ['Actual', 'LR', 'Poly2', 'Poly3']\n",
+    "predictions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
