Add documentation to inference prediction

--- a/script copy.ipynb
+++ b/script copy.ipynb
@@ -13403,7 +13403,7 @@
    "source": [
     "Dari hasil evaluasi pada 3 model diatas, didapatkan model **Linear Regression** biasa memiliki akurasi paling rendah dengan **R2 Score 0.93** dan **MAE 1.6769** pada training setnya dan pada validation setnya mendapat **R2 Score 0.92** dan **MAE 1.7665**, walaupun score-score tersebut tergolong bagus namun jika dibandingkan dengan 2 model lainnya yaitu Polynomial Features 2-Degree Linear Regression dan Polynomial Features 3-Degree Linear Regression **akurasi dari Linear Regression ini yang paling rendah**.\n",
     "\n",
-    "Sedangkan **Polynomial Features 3-Degree Linear Regression** memiliki akurasi paling tinggi dengan **R2 Score 0.96** dan **MAE 1.2296** pada training setnya dan pada validation setnya mendapat **R2 Score 0.96** dengan **MAE 1.2832**. Pada **Polynomial Features 2-Degree Linear Regression** dengan waktu training dan validation lebih cepat, score yang dihasilkan **tidak terlalu berbeda** dengan Polynomial Features 3-Degree Linear Regression."
+    "Sedangkan **Polynomial Features 3-Degree Linear Regression** memiliki akurasi paling tinggi dengan **R2 Score 0.96** dan **MAE 1.2296** pada training setnya dan pada validation setnya mendapat **R2 Score 0.96** dengan **MAE 1.2832**. Pada **Polynomial Features 2-Degree Linear Regression** dengan waktu training dan prediction lebih cepat, score yang dihasilkan **tidak terlalu berbeda** dengan Polynomial Features 3-Degree Linear Regression."
    ]
   },
   {
@@ -14310,6 +14310,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sebeleum data inference ini dapat digunakan untuk diprediksi, data inference ini akan **dilakukan preprocessing sama seperti pada data testing**."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 93,
    "metadata": {},
@@ -14513,7 +14520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -14524,11 +14531,11 @@
       "Inference Mean Absolute Error (MAE): 1.9803287506103515\n",
       "Inference Score: 0.93\n",
       "\n",
-      "---------Polynomial Regression Degree 2---------\n",
+      "---------Polynomial Features 2-Degree Linear Regression---------\n",
       "Inference Mean Absolute Error (MAE): 1.2444107055664062\n",
       "Inference Score: 0.98\n",
       "\n",
-      "---------Polynomial Regression Degree 3---------\n",
+      "---------Polynomial Features 3-Degree Linear Regression---------\n",
       "Inference Mean Absolute Error (MAE): 1.2525550842285156\n",
       "Inference Score: 0.98\n"
      ]
@@ -14538,12 +14545,19 @@
     "print('---------Ordinary Linear Regression---------')\n",
     "print(f\"Inference Mean Absolute Error (MAE): {mean_absolute_error(inference['price'], y_pred_inf)}\")\n",
     "print(f\"Inference Score: {model.score(inference_final, inference['price']):.2f}\")\n",
-    "print('\\n---------Polynomial Regression Degree 2---------')\n",
+    "print('\\n---------Polynomial Features 2-Degree Linear Regression---------')\n",
     "print(f\"Inference Mean Absolute Error (MAE): {mean_absolute_error(inference['price'], y_pred_inf_poly2)}\")\n",
     "print(f\"Inference Score: {model_poly2.score(inference_final, inference['price']):.2f}\")\n",
-    "print('\\n---------Polynomial Regression Degree 3---------')\n",
+    "print('\\n---------Polynomial Features 3-Degree Linear Regression---------')\n",
     "print(f\"Inference Mean Absolute Error (MAE): {mean_absolute_error(inference['price'], y_pred_inf_poly3)}\")\n",
     "print(f\"Inference Score: {model_poly3.score(inference_final, inference['price']):.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dari hasil prediksi menggunakan data inference pada 3 model diatas, model **Polynomial Features 2-Degree Linear Regression** memilki akurasi paling tinggi dengan **R2 score 0.98** dan **MAE 1.244**."
    ]
   }
  ],
