--- a/script copy.ipynb
+++ b/script copy.ipynb
@@ -14347,7 +14347,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Setelah data inference melalui preprocessing, sekarang melakukan prediksi pada data inference dengan setiap model."
+    "Setelah data inference melalui preprocessing, sekarang melakukan prediksi pada data inference pada setiap model."
    ]
   },
   {
@@ -14557,7 +14557,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dari hasil prediksi menggunakan data inference pada 3 model diatas, model **Polynomial Features 2-Degree Linear Regression** memilki akurasi paling tinggi dengan **R2 score 0.98** dan **MAE 1.244**."
+    "Dari hasil prediksi menggunakan data inference pada 3 model diatas, model **Polynomial Features 2-Degree Linear Regression** memilki akurasi paling tinggi dengan **R2 score 0.98** dan **MAE 1.2444**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Kesimpulan yang dapat ditarik dari hasil pemodelan dengan 3 model Linear Regression ini adalah:\n",
+    "\n",
+    "Model **Linear Regression biasa memiliki akurasi paling renda**h diantara 2 model lainnya dengan **R2 Score 0.92** dan **MAE 1.7665** pada testing setnya lalu P**olynomial Features 3-Degree Linear Regression** adalah model dengan akurasi paling tinggi dengan **R2 Score 0.96** dan **MAE 1.2832**. Lalu akurasi yang didapat oleh model **Polynomial Features 2-Degree Linear Regression** tidak berbeda jauh dengan model Polynomial Features 3-Degree Linear Regression t**etapi memiliki waktu training dan prediction lebih cepat** sehingga perbedaan akurasi ini tidak setimpal, pada pengujian menggunakan data inference model ini juga yang memiliki akurasi paling tinggi dengan **R2 Score 0.98** dan **MAE 1.2444**.\n",
+    "\n",
+    "\n",
+    "Jadi untuk dataset yang digunakan pada project ini, di antara 3 model yang dibuat model yang memiliki performa paling baik adalah model **Polynomial Features 2-Degree Linear Regression**. Namun perlu diingat semua model dilatih tanpa menggunakan data perjalanan dengan **Taxi** dari **Uber**."
    ]
   }
  ],
