Add note to conclustion

--- a/script.ipynb
+++ b/script.ipynb
@@ -14571,7 +14571,9 @@
     "Model **Linear Regression biasa memiliki akurasi paling rendah** diantara 2 model lainnya dengan **R2 Score 0.92** dan **MAE 1.7665** pada testing setnya lalu **Polynomial Features 3-Degree Linear Regression** adalah model dengan akurasi paling tinggi dengan **R2 Score 0.96** dan **MAE 1.2832** namun akurasi yang didapat oleh model **Polynomial Features 2-Degree Linear Regression** tidak berbeda jauh dengan model Polynomial Features 3-Degree Linear Regression tetapi **memiliki waktu training dan prediction lebih cepat** sehingga perbedaan akurasi ini tidak setimpal, pada pengujian menggunakan data inference model ini juga yang memiliki akurasi paling tinggi dengan **R2 Score 0.98** dan **MAE 1.2444**.\n",
     "\n",
     "\n",
-    "Jadi di antara 3 model yang dibuat, model yang memiliki performa paling baik untuk dataset yang digunakan pada project ini adalah model **Polynomial Features 2-Degree Linear Regression**. Namun perlu diingat semua model dilatih tanpa menggunakan data perjalanan dengan **Taxi** dari **Uber**."
+    "Jadi di antara 3 model yang dibuat, model yang memiliki performa paling baik untuk dataset yang digunakan pada project ini adalah model **Polynomial Features 2-Degree Linear Regression**.\n",
+    "\n",
+    "**NOTE**: Perlu diingat semua model dilatih tanpa menggunakan data perjalanan dengan **Taxi** dari **Uber**."
    ]
   }
  ],
