Add model analysis and overall analysis

--- a/script.ipynb
+++ b/script.ipynb
@@ -13396,6 +13396,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Model Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Dari hasil evaluasi pada 3 model diatas, didapatkan model **Linear Regression** biasa memiliki akurasi paling rendah dengan **R2 Score 0.93** dan **MAE 1.6769** pada training setnya dan pada testing setnya mendapat **R2 Score 0.92** dan **MAE 1.7665**, walaupun score-score tersebut tergolong bagus namun jika dibandingkan dengan 2 model lainnya yaitu Polynomial Features 2-Degree Linear Regression dan Polynomial Features 3-Degree Linear Regression **akurasi dari Linear Regression ini yang paling rendah**.\n",
     "\n",
     "Sedangkan **Polynomial Features 3-Degree Linear Regression** memiliki akurasi paling tinggi dengan **R2 Score 0.96** dan **MAE 1.2296** pada training setnya dan pada testing setnya mendapat **R2 Score 0.96** dengan **MAE 1.2832**. Pada **Polynomial Features 2-Degree Linear Regression** dengan waktu training dan prediction lebih cepat, score yang dihasilkan **tidak terlalu berbeda** dengan Polynomial Features 3-Degree Linear Regression."
@@ -14566,9 +14573,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Kesimpulan yang dapat ditarik dari hasil pemodelan dengan 3 model Linear Regression ini adalah:\n",
+    "Kesimpulan yang dapat ditarik dari hasil EDA dan pemodelan dengan 3 model Linear Regression ini adalah:\n",
     "\n",
-    "Model **Linear Regression biasa memiliki akurasi paling rendah** diantara 2 model lainnya dengan **R2 Score 0.92** dan **MAE 1.7665** pada testing setnya lalu **Polynomial Features 3-Degree Linear Regression** adalah model dengan akurasi paling tinggi dengan **R2 Score 0.96** dan **MAE 1.2832** namun akurasi yang didapat oleh model **Polynomial Features 2-Degree Linear Regression** tidak berbeda jauh dengan model Polynomial Features 3-Degree Linear Regression tetapi **memiliki waktu training dan prediction lebih cepat** sehingga perbedaan akurasi ini tidak setimpal, pada pengujian menggunakan data inference model ini juga yang memiliki akurasi paling tinggi dengan **R2 Score 0.98** dan **MAE 1.2444**.\n",
+    "Dataset ini mencatat data perjalanan Taxi Online Uber dan Lyft pada bulan November dan Desember dimana pada bulan-bulan ini di USA sedang musim dingin dengan **rata-rata temperaturenya sekitar 39.58°F** atau sekitar 4.21°C karena ini juga cuaca yang tercatat kebanyakan adalah Overcast (mendung) dengan sesekali hujan. Walaupun demikian, sepertinya cuaca ini tidak berpengaruh terhadap tarif dari Uber dan Lyft karena pada dasarnya tarif dari sebuah taxi online ini berdasarkan **jarak**, **surge** (lonjakan pemesanan), dan juga **jenis produk** dari taxi online itu seperti contohnya Lux Black SUV dari Lyft dan Black SUV dari Uber dimana produk-produk tersebut adalah produk paling mahal yang ditawarkan dari masing-masing perusahaan. Maka, pilihan produk, jarak yang dituju, dan surge akan sangat mempengaruhi tarif dari sebuah taxi online.\n",
+    "\n",
+    "Dari hasil EDA tersebut maka feature yang digunakan untuk melatih model adalah `distance`, `surge_multiplier`, dan `name`. Lalu, didapatkan hasil dari model **Linear Regression biasa memiliki akurasi paling rendah** diantara 2 model lainnya dengan **R2 Score 0.92** dan **MAE 1.7665** pada testing setnya lalu **Polynomial Features 3-Degree Linear Regression** adalah model dengan akurasi paling tinggi dengan **R2 Score 0.96** dan **MAE 1.2832** namun akurasi yang didapat oleh model **Polynomial Features 2-Degree Linear Regression** tidak berbeda jauh dengan model Polynomial Features 3-Degree Linear Regression tetapi **memiliki waktu training dan prediction lebih cepat** sehingga perbedaan akurasi ini tidak setimpal, pada pengujian menggunakan data inference model ini juga yang memiliki akurasi paling tinggi dengan **R2 Score 0.98** dan **MAE 1.2444**.\n",
     "\n",
     "\n",
     "Jadi di antara 3 model yang dibuat, model yang memiliki performa paling baik untuk dataset yang digunakan pada project ini adalah model **Polynomial Features 2-Degree Linear Regression**.\n",
